--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "react-toastify/dist/ReactToastify.css";
 html,
 body {
   padding: 0;
@@ -15,12 +19,9 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.banner {
+  background-image: url('../assets/bannerbackground.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
